--- a/2024/day_1/day_1.ipynb
+++ b/2024/day_1/day_1.ipynb
@@ -15,8 +15,8 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
-    "import sys"
+    "import sys\n",
+    "import pandas as pd"
    ],
    "id": "initial_id",
    "outputs": [],
