--- a/2024/day_9/day_9.ipynb
+++ b/2024/day_9/day_9.ipynb
@@ -130,7 +130,7 @@
     "    checksum = 0\n",
     "    for i, ch in enumerate(ordered_string):\n",
     "        if ch.isdigit():\n",
-    "            checksum += long(ch) * i\n",
+    "            checksum += int(ch) * i\n",
     "    return checksum\n",
     "\n",
     "transformed_string = transform_to_sequence(characters_string)\n",
@@ -149,19 +149,6 @@
     }
    ],
    "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-10T06:29:19.821942Z",
-     "start_time": "2024-12-10T06:29:19.815571Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "1c4c083cb18561de",
-   "outputs": [],
-   "execution_count": 9
   },
   {
    "metadata": {
